# website

./: .gitignore  CMakeLists.txt  Makefile  N11  README.md  certificate.pem  key.pem  package-lock.json  package.json  tailwind.config.js  update.sh
.github/workflows/: c-cpp.yml
Engine/: Engine.js  package.json
Include/: API.hpp  User.hpp
Source/: API.cpp  N11.cpp  User.cpp  main.cpp
Website/: CMakeLists.txt  website
Website/Include/: api.hpp  certificateVerifier.hpp  db.hpp  search.hpp  theme.hpp  twilio.hpp  utils.hpp  zstr.hpp
Website/Source/: api.cpp  db.cpp  main.cpp  search.cpp  theme.cpp  twilio.cpp  utils.cpp
mods/Navbar/: Logo.tsx  Navbar.tsx
mods/Navbar/Apply/: Button.tsx
mods/Navbar/Contact/: Button.tsx
mods/Navbar/Donate/: Button.tsx
mods/Navbar/Employees/: Button.tsx  Page.tsx
mods/Navbar/Investors/: Button.tsx
mods/Navbar/Products/: Button.tsx  Page.tsx
pages/: _app.tsx  index.html  index.tsx  login.html  signup.html
public/css/: login.css
public/fonts/: jbm.css
public/js/: login.js  signup.js
www/: 404.html  account.html  index.html  login.html  robots.txt  search.html  security.html  signup.html  sitemap.xml
www/css/: account.css  index.css  login.css  profile.css  search.css  theme.css
www/js/: index.js  login.js  profile.js  search.js  searchbar.js  sha512.js  signup.js  theme.js
