cmake_minimum_required(VERSION 3.0)
project(N11)

file(GLOB_RECURSE Sources Source/*.cpp)
include_directories(Include)
include_directories(/usr/local/include)
add_executable(N11 ${Sources})
set(CMAKE_CXX_FLAGS "-fpic -pthread -L/usr/local/lib/")
add_link_options(-pthread -L/usr/local/lib/)
set_property(TARGET N11 PROPERTY C_STANDARD 23)
target_link_libraries(N11 PRIVATE link)