cmake_minimum_required(VERSION 3.0)
project(N11)

file(GLOB_RECURSE Sources Source/*.cpp)
include_directories(Include)
include_directories(/usr/local/include)
add_executable(N11 ${Sources})
set(CMAKE_CXX_FLAGS "-fpic -pthread")
set(CMAKE_EXE_LINKER_FLAGS "-L/usr/local/lib/")
target_compile_features(N11 PUBLIC cxx_std_17)
set (CMAKE_CXX_FLAGS "-std=c++17")
target_link_libraries(N11 PRIVATE link)